[gd_scene load_steps=2 format=3 uid="uid://ba883a7507fac"]

[ext_resource type="Script" uid="uid://cfkx346rjhbh8" path="res://scenes/movement/basic_movement/basic_movement_demo.gd" id="1_basic_movement"]

[node name="BasicMovementDemo" type="Node2D"]
script = ExtResource("1_basic_movement")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 300)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(400, 300)

[node name="PlayerSprite" type="ColorRect" parent="Player"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
color = Color(0.2, 0.8, 0.2, 1)

[node name="Trail2D" type="Line2D" parent="."]
width = 3.0
default_color = Color(0, 1, 1, 0.5)

[node name="UI" type="CanvasLayer" parent="."]

[node name="InstructionPanel" type="Panel" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/InstructionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/InstructionPanel/VBoxContainer"]
layout_mode = 2
text = "üèÉ Basic Movement"
horizontal_alignment = 1

[node name="Instructions" type="RichTextLabel" parent="UI/InstructionPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[b]Controls:[/b]
‚Ä¢ WASD or Arrow Keys to move
‚Ä¢ Adjust speed with slider

[b]Concepts:[/b]
‚Ä¢ Input detection and normalization
‚Ä¢ Velocity-based movement
‚Ä¢ Screen boundary clamping"

[node name="ParameterPanel" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ParameterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParameterTitle" type="Label" parent="UI/ParameterPanel/VBoxContainer"]
layout_mode = 2
text = "‚öôÔ∏è Parameters"
horizontal_alignment = 1

[node name="SpeedContainer" type="HBoxContainer" parent="UI/ParameterPanel/VBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="UI/ParameterPanel/VBoxContainer/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Speed: 200 px/s"

[node name="SpeedSlider" type="HSlider" parent="UI/ParameterPanel/VBoxContainer/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 50.0
max_value = 500.0
step = 10.0
value = 200.0

[node name="StatusPanel" type="Panel" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -150.0
offset_right = -10.0
offset_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusTitle" type="Label" parent="UI/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "üìä Live Status"
horizontal_alignment = 1

[node name="VelocityLabel" type="Label" parent="UI/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "Velocity: (0.0, 0.0)"

[node name="PositionLabel" type="Label" parent="UI/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "Position: (400.0, 300.0)"

[node name="InputLabel" type="Label" parent="UI/StatusPanel/VBoxContainer"]
layout_mode = 2
text = "Input: None"
